[gd_scene load_steps=13 format=1]

[ext_resource path="res://game_multi_vs/game_multi_vs.gd" type="Script" id=1]
[ext_resource path="res://actor/scene/green_sky/green_sky.tscn" type="PackedScene" id=2]
[ext_resource path="res://actor/archer/archer.tscn" type="PackedScene" id=3]
[ext_resource path="res://actor/aiming/aiming_sight.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/fonts/comic_bold.fnt" type="BitmapFont" id=5]
[ext_resource path="res://ui/head_shot/head_shot.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/blood/ui_blood_bg.png" type="Texture" id=7]
[ext_resource path="res://ui/blood/ui_blood.png" type="Texture" id=8]
[ext_resource path="res://ui/room_match/room_match.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/your_turn/your_turn.tscn" type="PackedScene" id=10]
[ext_resource path="res://game_multi_vs/ui_result.tscn" type="PackedScene" id=11]
[ext_resource path="res://game_multi_vs/multi_vs_win.tscn" type="PackedScene" id=12]

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )
init_speed = 2000.0
gravity = 1500.0
character_move_speed = 500.0
wind_slow_down = 0.0

[node name="scene_arts" parent="." instance=ExtResource( 2 )]

[node name="camera" type="Camera2D" parent="."]

transform/pos = Vector2( 515.768, 294.984 )
transform/rot = 90.0
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = true
smoothing/speed = 16.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="player_0" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 100, 452 )
collision/layers = 2
collision/mask = 0

[node name="player_1" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 1024, 452 )
transform/scale = Vector2( -1, 1 )
collision/layers = 2
collision/mask = 0

[node name="weapon" type="Node2D" parent="."]

[node name="aiming_sight" parent="." instance=ExtResource( 4 )]

visibility/visible = false

[node name="ui" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="battle_time" type="Label" parent="ui"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -358.0
margin/top = -1.0
margin/right = -510.0
margin/bottom = 40.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="turn_time" type="Label" parent="ui"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 77.0
margin/top = 3.0
margin/right = -75.0
margin/bottom = 44.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="head_shot" parent="ui" instance=ExtResource( 6 )]

margin/left = 354.0
margin/top = 223.0
margin/right = 394.0
margin/bottom = 263.0

[node name="blood" type="Control" parent="ui"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="player_0" type="TextureProgress" parent="ui/blood"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 227.0
margin/top = 6.0
margin/right = 477.0
margin/bottom = 35.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 7 )
texture/over = null
texture/progress = ExtResource( 8 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="player_1" type="TextureProgress" parent="ui/blood"]

rect/scale = Vector2( -1, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 789.0
margin/top = 7.0
margin/right = 1039.0
margin/bottom = 32.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 7 )
texture/over = null
texture/progress = ExtResource( 8 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="room_match" parent="ui" instance=ExtResource( 9 )]

visibility/visible = false

[node name="your_turn" parent="ui" instance=ExtResource( 10 )]

margin/left = 237.0
margin/top = 208.0
margin/right = 911.0
margin/bottom = 301.0

[node name="game_over" parent="ui" instance=ExtResource( 11 )]

visibility/visible = false

[node name="vs_win" parent="ui" instance=ExtResource( 12 )]

visibility/visible = false

[node name="ping" type="Label" parent="ui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 4.0
margin/right = 116.0
margin/bottom = 36.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


